# time_tracker

./: .gitignore  README.md  pyproject.toml
src/time_tracker/: editor.py  entry.py  main.py  parser.py
